Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -112,8 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# initial variables of our regression line\n",
